--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     ext.android_support_version = '28.0.0'
     ext.room_version = '1.1.1'
     ext.gradle_version = '3.1.0'
+    ext.okhttp_version = '3.14.0'
+    ext.gson_version = '2.8.5'
+
     repositories {
         google()
         jcenter()
