--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,15 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
     compileOnly "org.glassfish:javax.annotation:3.1.1"
 
+    //Dagger
+    implementation "com.google.dagger:dagger:$dagger2_version"
+    implementation 'com.android.support:support-v4:28.0.0'
+    kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
+
+    implementation "com.google.dagger:dagger-android-support:$dagger2_version"
+    compileOnly 'javax.annotation:jsr250-api:1.0'
+    implementation 'javax.inject:javax.inject:1'
+
     //Rx
     implementation "io.reactivex.rxjava2:rxjava:2.2.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
